# ikn-lockdown

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  ikn-lockdown.sln
Lockdown.Panel/: App.xaml  App.xaml.cs  Lockdown.Panel.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
Lockdown.Panel/Pages/: FileListPage.xaml  FileListPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
Lockdown.Panel/Properties/: launchSettings.json
Lockdown.Panel/Services/: ServiceManager.cs
Lockdown.Service/: Lockdown.Service.csproj  NativeMethods.txt  Program.cs  WindowsWorker.cs
Lockdown.Service/Properties/: launchSettings.json
Lockdown.Service/Properties/PublishProfiles/: FolderProfile.pubxml
docs/user/: book.toml
docs/user/src/: SUMMARY.md  about.md  quick-start.md  version.md  welcome.md
lockdown-panel/: Cargo.toml  app.manifest  build.rs
lockdown-panel/src/: app.rs  error.rs  macros.rs  main.rs  service.rs  store.rs
lockdown-panel/src/components/: about.rs  mod.rs  service_banner.rs
lockdown-panel/src/utils/: error_box.rs  mod.rs  win_filebox.rs
lockdown-service/: Cargo.toml
lockdown-service/src/: main.rs  service.rs
