[package]
name = "lockdown-panel"
version = "0.1.0"
edition = "2021"

build = "./build.rs"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
iced = "0.13"
thiserror = "2.0.11"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System_Services",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1.12"

[package.metadata.windows]
manifest = "app.manifest"
