[package]
name = "lockdown-panel"
version = "0.1.0"
edition = "2021"

build = "./build.rs"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
iced = { version = "0.13", default-features = false, features = [
    "auto-detect-theme",
    "wgpu",
] }
ico = "0.4.0"
rfd = "0.15.2"
thiserror = "2.0.11"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System_Services",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winapi = "0.3.9"
winres = "0.1.12"
